--- a/thankyou.html
+++ b/thankyou.html
@@ -71,7 +71,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 Your order has been successfully placed and will be delivered shortly.
             </p>
             <a
-                href="home.html"
+                href="index.html"
                 class="inline-block bg-gradient-to-r from-green-500 to-teal-600 text-white font-bold py-3 px-8 rounded-full shadow-lg hover:shadow-xl transform hover:scale-105 transition-all duration-300 ease-in-out focus:outline-none focus:ring-4 focus:ring-green-300"
             >
                 Back to Home
